log
Fri, Mar 21, 2025  9:54:40 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Fri, Mar 21, 2025 10:15:44 AM: 
 exercises.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  1|4
total_score: 10/70
1dac843
Fri, Mar 21, 2025 10:39:59 AM: 
 exercises.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
9777992
Fri, Mar 21, 2025 10:52:34 AM: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:4: error: 'valor' undeclared (first use in this function)
    valor = (int *)first(L);
    ^~~~~
exercises.c:81:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
f2dc644
Fri, Mar 21, 2025 10:55:01 AM: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
exercises.c: In function 'eliminaElementos':
exercises.c:81:4: error: 'valor' undeclared (first use in this function)
    valor = (int *)first(L);
    ^~~~~
exercises.c:81:4: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
57043b9
